--- a/_config.yml
+++ b/_config.yml
@@ -103,4 +103,6 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+	repository: https://github.com/SuperManZTF/ThreeDimensional.git
+	branch: master
